--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,18 @@
-fastapi>=0.103.0
-uvicorn>=0.22.0
-pydantic>=2.3.0
-pydantic-settings>=2.0.3
-sqlalchemy>=2.0.20
-psycopg2-binary>=2.9.7
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-python-dotenv>=1.0.0
+alembic==1.14.1
+fastapi==0.115.11
+uvicorn==0.34.0
+pydantic==2.10.6
+pydantic[email]==1
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+SQLAlchemy==2.0.38
+psycopg2-binary==2.9.10
+python-jose[cryptography]==3.4.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.0.1
+python-multipart==0.0.20
+asyncpg==0.30.0
+tiktoken==0.9.0
+openai==1.65.2
+tenacity==9.0.0
+anthropic==0.49.0
