--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,27 @@
 {
-    "name": "aihub-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
+  "name": "vue-minimal-project",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-    },
-    "dependencies": {
-        "@vueuse/core": "^10.11.1",
-        "axios": "^1.8.1",
-        "chart.js": "^4.4.8",
-        "dayjs": "^1.11.13",
-        "marked": "^7.0.5",
-        "pinia": "^2.3.1",
-        "prismjs": "^1.29.0",
-        "vue": "^3.5.13",
-        "vue-chartjs": "^5.2.0",
-        "vue-router": "^4.5.0"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^4.6.2",
-        "autoprefixer": "^10.4.15",
-        "eslint": "^8.48.0",
-        "eslint-plugin-vue": "^9.17.0",
-        "postcss": "^8.4.29",
-        "sass": "^1.66.1",
-        "tailwindcss": "^3.3.3",
-        "vite": "^4.5.9"
-    }
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.8.2",
+    "bootstrap": "^5.3.2",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.7",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.3.4",
+    "sass": "^1.69.5",
+    "vite": "^4.4.9"
+  }
 }
