--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,10 @@ APP_PORT=8000
 APP_ROOT_PATH=
 
 # Настройки базы данных (без префикса протокола)
-DATABASE_URL=//postgres:parol@localhost:5432/aihub
+POSTGRES_USER=aihub_user
+POSTGRES_PASSWORD=your-secret-key
+POSTGRES_DB=aihub_db
+DATABASE_URL=//postgres:your-secret-key@localhost:5432/aihub
 
 # Секретные ключи
 SECRET_KEY=your-super-secret-key-change-in-production
@@ -16,8 +19,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES=11520
 
 # Данные администратора по умолчанию
 DEFAULT_ADMIN_EMAIL=admin@example.com
-DEFAULT_ADMIN_PASSWORD=AdminPassword123
+DEFAULT_ADMIN_PASSWORD=your-admin-password
 DEFAULT_ADMIN_USERNAME=admin
 
 # CORS настройки
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://frontend:5173
