--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,8 @@
 # Production environment settings
+NODE_ENV=production
+VITE_APP_NAME=AIHub
+
+# API settings
 VITE_API_BASE_URL=/api
 VITE_API_TIMEOUT=30000
 
