--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -63,7 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:Gfhjkmflvby@localhost:5432/aihub
+# URL будет установлен в env.py через переменную окружения
+sqlalchemy.url = postgresql://aihub_admin:PostgresqlAccess73915@localhost:5432/aihub
 
 
 [post_write_hooks]
