--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -63,8 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# URL будет установлен в env.py через переменную окружения
-sqlalchemy.url = postgresql://aihub_admin:PostgresqlAccess73915@localhost:5432/aihub
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
