--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # База данных PostgreSQL
   postgres:
@@ -12,13 +10,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5432:5432"  # Ограничение доступа только с localhost
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U aihub_admin -d aihub"]
       interval: 5s
       timeout: 5s
       retries: 5
     restart: unless-stopped
+    networks:
+      - internal_network
 
   # Бэкенд FastAPI
   backend:
@@ -31,20 +31,22 @@ services:
         condition: service_healthy
     environment:
       - APP_ENV=production
-      - POSTGRES_USER=${POSTGRES_USER:-aihub_admin}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-lLSsdflDFjFjLWSlkLKSDFlsdlksjdLKJSFjk}
-      - POSTGRES_DB=${POSTGRES_DB:-aihub}
-      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-aihub_admin}:${POSTGRES_PASSWORD:-lLSsdflDFjFjLWSlkLKSDFlsdlksjdLKJSFjk}@postgres:5432/${POSTGRES_DB:-aihub}
-      - ALLOWED_ORIGINS=http://localhost,http://frontend,http://localhost:80,http://frontend:80
-      - SECRET_KEY=${SECRET_KEY:-xJ2p8Lq5NfR7tK3vY9bZ6mD4sA1hC0eG}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-bvnE5jwZLx2h8tQq1rPdK9sF7aW4gYcM0iDu3AoX6pT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-*}
+      - SECRET_KEY=${SECRET_KEY:-supersecretkey}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-jwtsupersecretkey}
       - JWT_ALGORITHM=${JWT_ALGORITHM:-HS256}
-      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-11520}
-    ports:
-      - "4000:4000"
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+    expose:
+      - "4000"  # Только экспозирование порта, без проксирования наружу
     volumes:
       - ./backend:/app  # Для разработки - монтируем локальный код
     restart: unless-stopped
+    networks:
+      - internal_network
 
   # Фронтенд Vue3 + Vite
   frontend:
@@ -58,12 +60,42 @@ services:
       - NODE_ENV=production
       - VITE_API_BASE_URL=/api
       - VITE_APP_NAME=${VITE_APP_NAME:-AIHub}
-    ports:
-      - "80:80"
+    expose:
+      - "80"  # Только экспозирование порта, без проксирования наружу
     depends_on:
       - backend
     restart: unless-stopped
+    networks:
+      - internal_network
 
-# Для хранения данных PostgreSQL
+  # Выделенный Nginx сервис
+  nginx:
+    image: nginx:stable-alpine
+    container_name: aihub-nginx
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/ssl:/etc/nginx/ssl
+      - ./nginx/logs:/var/log/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - backend
+      - frontend
+    restart: unless-stopped
+    networks:
+      - internal_network
+      - web_network
+
+# Тома для хранения данных
 volumes:
   postgres_data:
+  frontend_static:
+    driver: local
+
+# Сети
+networks:
+  internal_network:
+    driver: bridge  # Изменено с internal: true, чтобы обеспечить связность
+  web_network:
+    driver: bridge
