--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,38 +1,23 @@
 server {
     listen 80;
-    server_name localhost;
-
-    # Корневая директория для сайта
+    
+    # Корневая директория для фронтенда
     root /usr/share/nginx/html;
     index index.html;
 
-    # Проксирование запросов к API
-    location /api/ {
-        proxy_pass http://backend:8000/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Таймауты для долгих запросов
-        proxy_connect_timeout 120;
-        proxy_send_timeout 120;
-        proxy_read_timeout 120;
-    }
-
-    # Обработка запросов к статическим файлам
-    location / {
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
-    }
-
-    # Кэширование статических файлов с хешем в имени
+    # Кэширование статических файлов
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
+    # Обработка запросов к статическим файлам фронтенда
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
+    }
+
     # Логи
-    error_log /var/log/nginx/app_error.log;
-    access_log /var/log/nginx/app_access.log;
+    error_log /var/log/nginx/frontend_error.log;
+    access_log /var/log/nginx/frontend_access.log;
 }
