--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,6 @@
+# Добавляем resolver для DNS запросов
+resolver 8.8.8.8 valid=30s;
+
 server {
     listen 80;
     server_name aihub.workindev.ru www.aihub.workindev.ru localhost;
@@ -18,11 +21,71 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # Таймауты для долгих запросов
         proxy_connect_timeout 120;
         proxy_send_timeout 120;
         proxy_read_timeout 120;
+    }
+
+    # Проксирование внешних запросов к OpenAI
+    location /external/openai/ {
+        # Важно: убираем /external/openai/ из пути и направляем на API OpenAI
+        rewrite ^/external/openai/(.*) /$1 break;
+        proxy_pass https://api.openai.com;
+        proxy_set_header Host api.openai.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Увеличенные таймауты для нестабильного соединения
+        proxy_connect_timeout 180;
+        proxy_send_timeout 180;
+        proxy_read_timeout 180;
+
+        # Буферизация для стабильности
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+    }
+
+    # Проксирование к другим внешним API (например, Anthropic)
+    location /external/anthropic/ {
+        rewrite ^/external/anthropic/(.*) /$1 break;
+        proxy_pass https://api.anthropic.com;
+        proxy_set_header Host api.anthropic.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Увеличенные таймауты
+        proxy_connect_timeout 180;
+        proxy_send_timeout 180;
+        proxy_read_timeout 180;
+
+        # Буферизация
+        proxy_buffering on;
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+    }
+
+    # Добавьте здесь проксирование к другим внешним API по необходимости
+
+    # Тестовый внешний API для проверки
+    location /external/test/ {
+        rewrite ^/external/test/(.*) /$1 break;
+        proxy_pass https://httpbin.org;
+        proxy_set_header Host httpbin.org;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Стандартные таймауты
+        proxy_connect_timeout 60;
+        proxy_send_timeout 60;
+        proxy_read_timeout 60;
     }
 
     # Логи
@@ -53,7 +116,7 @@ server {
 #
 #     # Проксирование запросов к API
 #     location /api/ {
-#         proxy_pass http://backend:4000/;
+#         proxy_pass http://backend:4000/api/;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -64,6 +127,8 @@ server {
 #         proxy_send_timeout 120;
 #         proxy_read_timeout 120;
 #     }
+#
+#     # Проксирование внешних запросов (добавьте здесь те же блоки, что и для HTTP)
 #
 #     # Логи
 #     error_log /var/log/nginx/app_error.log;
